# django_nextjs_auth

./: README.md
backend/: .gitignore  pyproject.toml
backend/backend/: settings.py  urls.py
backend/nextjs_auth/: apps.py  serializers.py  urls.py  views.py
frontend/: .env  next-auth.d.ts  next.config.js  package.json  pnpm-lock.yaml
frontend/pages/: _app.tsx  index.tsx
frontend/pages/api/auth/: [...nextauth].ts
