[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Provide auth for Next.js"
authors = ["Mujahid Anuar <17759705+mujahidfa@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "^3.13.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.172"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
